# Connect4

./: .coverage  .coveragerc  README.md  main.py  pyproject.toml
ai/: ai.py
docs/: Käyttöohje.md  Testausdokumentti.md  Toteutusdokumentti.md  maarittelydokumentti.md
docs/viikkoraportit/: viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
game/: game.py  rules.py
test/: .coverage  test_ai.py  test_game.py  test_time.py
